<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">WELCOME TO K234112E</string>
    <string name="str_say_hello">HELLO K234112E</string>
    <string name="str_click_me_to_say_hello">CLICK ME TO SAY HELLO</string>
    <string name="str_login_system">Login System</string>
    <string name="str_username">Username:</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_password">Password:</string>
    <string name="str_enter_your_user_name">Enter your Username</string>
    <string name="str_enter_your_password">Enter your Password</string>
    <string name="str_login_success">Login Success</string>
    <string name="str_login_fail">Login Fail</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">Mr</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_infor">SAVE LOGIN INFORMATION</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_employee_id">Employee Id</string>
    <string name="str_employee_name">Employee Name\n</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>
    <string name="str_" />
    <string name="str_Exit">Are you sure you want to Exit?</string>
    <string name="str_department">Department</string>
    <string name="str_list_employee">List Employee</string>
    <string name="str_birthplace">Birth PLace</string>
    <string name="str_order_report">Order Report</string>
    <string name="str_from_date">From Date:</string>
    <string name="str_to_date">To Date:</string>
    <string-array name="array_birthplace">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
</resources>