<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEmployeeActivity">

    <TextView
        android:id="@+id/txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_employee_id"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_employee_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_phone_number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtBirthplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_birthplace"
        android:textSize="20sp" />

    <AutoCompleteTextView
        android:completionThreshold="1"
        android:id="@+id/actBirthplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AutoCompleteTextView"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSave"
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/check" />

        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/error" />
    </LinearLayout>
</LinearLayout>