<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome K234112E"
                android:textAlignment="center"
                android:textColor="#F82517"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="say_hello"
                android:text="Click me!" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="close_app"
                android:text="Close" />

            <Button
                android:onClick="open_calculator_app"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_open_calculator_app" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_welcome"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click_say_hello"
                android:text="@string/str_click_me_to_say_hello" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>