<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OrderManagementActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/str_order_report"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/txtFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/str_from_date" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2025" />

            <ImageView
                android:id="@+id/imgFromDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                app:srcCompat="@mipmap/schedule" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/txtToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/str_to_date" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2026" />

            <ImageView
                android:id="@+id/imgToDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                app:srcCompat="@mipmap/schedule" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgCleanFilter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/clean" />

        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/filter" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp" />
</LinearLayout>
